--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DATABASE_URL = mongodb://127.0.0.1:27017/shopdb
+#DATABASE_URL = mongodb://127.0.0.1:27017/shopdb
+DATABASE_URL= mongodb+srv://posuser:Smicr123@cluster0.6uuly.mongodb.net/shopdb
 TOKEN_SECRET= jllgshllWEUJHGHYJkjsfjds90
  
 
